// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DICE Institute of Contemporary Arts retrieve and find events 1`] = `
[
  {
    "category": "event",
    "overview": {
      "actors": [],
      "categories": [],
      "directors": [],
      "duration": 12600000,
    },
    "performances": [
      {
        "accessibility": {},
        "bookingUrl": "https://dice.fm/event/eorvpw-laurel-halo-presents-midnight-zone-a-film-by-julian-charrire-4th-apr-ica-institute-of-contemporary-arts-london-tickets",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1775327400000,
      },
    ],
    "showingId": "dice.fm-eorvpw",
    "title": "Laurel Halo presents Midnight Zone (a film by Julian Charriére)",
    "url": "https://dice.fm/event/eorvpw-laurel-halo-presents-midnight-zone-a-film-by-julian-charrire-4th-apr-ica-institute-of-contemporary-arts-london-tickets",
  },
]
`;

exports[`DICE St Matthias Church retrieve and find events 1`] = `
[
  {
    "category": "event",
    "overview": {
      "actors": [],
      "categories": [],
      "directors": [],
      "duration": 10800000,
    },
    "performances": [
      {
        "accessibility": {},
        "bookingUrl": "https://dice.fm/event/eoa23w-jozef-van-wissem-the-cabinet-of-dr-caligari-live-soundtrack-17th-feb-st-matthias-church-london-tickets",
        "format": {},
        "notes": "Presented by Baba Yaga's Hut",
        "status": {},
        "time": 1771356600000,
      },
    ],
    "showingId": "dice.fm-eoa23w",
    "title": "Jozef Van Wissem - The Cabinet of Dr. Caligari - Live Soundtrack",
    "url": "https://dice.fm/event/eoa23w-jozef-van-wissem-the-cabinet-of-dr-caligari-live-soundtrack-17th-feb-st-matthias-church-london-tickets",
  },
]
`;

exports[`DICE The Haggerston retrieve and find events 1`] = `
[
  {
    "category": "event",
    "overview": {
      "actors": [],
      "categories": [],
      "directors": [],
      "duration": 7200000,
    },
    "performances": [
      {
        "accessibility": {},
        "bookingUrl": "https://dice.fm/event/5373ry-francesca-woodman-documentary-screening-21st-feb-the-haggerston-london-tickets",
        "format": {},
        "notes": "Presented by Deeper Into Movies",
        "status": {},
        "time": 1771682400000,
      },
    ],
    "showingId": "dice.fm-5373ry",
    "title": "FRANCESCA WOODMAN - DOCUMENTARY SCREENING",
    "url": "https://dice.fm/event/5373ry-francesca-woodman-documentary-screening-21st-feb-the-haggerston-london-tickets",
  },
  {
    "category": "event",
    "overview": {
      "actors": [],
      "categories": [],
      "directors": [],
      "duration": 7200000,
    },
    "performances": [
      {
        "accessibility": {},
        "bookingUrl": "https://dice.fm/event/ry938r-francesca-woodman-documentary-screening-21st-feb-the-haggerston-london-tickets",
        "format": {},
        "notes": "Presented by Deeper Into Movies",
        "status": {},
        "time": 1771689600000,
      },
    ],
    "showingId": "dice.fm-ry938r",
    "title": "FRANCESCA WOODMAN: DOCUMENTARY SCREENING",
    "url": "https://dice.fm/event/ry938r-francesca-woodman-documentary-screening-21st-feb-the-haggerston-london-tickets",
  },
  {
    "category": "event",
    "overview": {
      "actors": [],
      "categories": [],
      "directors": [],
      "duration": 5400000,
    },
    "performances": [
      {
        "accessibility": {},
        "bookingUrl": "https://dice.fm/event/7dpdm7-we-are-making-a-film-about-mark-fisher-28th-feb-the-haggerston-london-tickets",
        "format": {},
        "notes": "Presented by Deeper Into Movies",
        "status": {},
        "time": 1772287200000,
      },
    ],
    "showingId": "dice.fm-7dpdm7",
    "title": "WE ARE MAKING A FILM ABOUT MARK FISHER",
    "url": "https://dice.fm/event/7dpdm7-we-are-making-a-film-about-mark-fisher-28th-feb-the-haggerston-london-tickets",
  },
  {
    "category": "event",
    "overview": {
      "actors": [],
      "categories": [],
      "directors": [],
      "duration": 5400000,
    },
    "performances": [
      {
        "accessibility": {},
        "bookingUrl": "https://dice.fm/event/av337d-we-are-making-a-film-about-mark-fisher-28th-feb-the-haggerston-london-tickets",
        "format": {},
        "notes": "Presented by Deeper Into Movies",
        "status": {},
        "time": 1772294400000,
      },
    ],
    "showingId": "dice.fm-av337d",
    "title": "WE ARE MAKING A FILM ABOUT MARK FISHER",
    "url": "https://dice.fm/event/av337d-we-are-making-a-film-about-mark-fisher-28th-feb-the-haggerston-london-tickets",
  },
  {
    "category": "event",
    "overview": {
      "actors": [],
      "categories": [],
      "directors": [],
      "duration": 5400000,
    },
    "performances": [
      {
        "accessibility": {},
        "bookingUrl": "https://dice.fm/event/bb3bmg-industrial-symphony-no-1-david-lynch-angelo-badalamenti-julee-cruise-7th-mar-the-haggerston-london-tickets",
        "format": {},
        "notes": "Presented by Deeper Into Movies",
        "status": {},
        "time": 1772892000000,
      },
    ],
    "showingId": "dice.fm-bb3bmg",
    "title": "INDUSTRIAL SYMPHONY NO. 1 David Lynch Angelo Badalamenti, Julee Cruise",
    "url": "https://dice.fm/event/bb3bmg-industrial-symphony-no-1-david-lynch-angelo-badalamenti-julee-cruise-7th-mar-the-haggerston-london-tickets",
  },
  {
    "category": "event",
    "overview": {
      "actors": [],
      "categories": [],
      "directors": [],
      "duration": 14400000,
    },
    "performances": [
      {
        "accessibility": {},
        "bookingUrl": "https://dice.fm/event/92wvxn-industrial-symphony-no-1-david-lynch-angelo-badalamenti-julee-cruise-7th-mar-the-haggerston-london-tickets",
        "format": {},
        "notes": "Presented by Deeper Into Movies",
        "status": {},
        "time": 1772899200000,
      },
    ],
    "showingId": "dice.fm-92wvxn",
    "title": "INDUSTRIAL SYMPHONY NO. 1 David Lynch Angelo Badalamenti, Julee Cruise",
    "url": "https://dice.fm/event/92wvxn-industrial-symphony-no-1-david-lynch-angelo-badalamenti-julee-cruise-7th-mar-the-haggerston-london-tickets",
  },
  {
    "category": "event",
    "overview": {
      "actors": [],
      "categories": [],
      "directors": [],
      "duration": 3600000,
    },
    "performances": [
      {
        "accessibility": {},
        "bookingUrl": "https://dice.fm/event/6dnqx2-martin-amiss-england-14th-mar-the-haggerston-london-tickets",
        "format": {},
        "notes": "Presented by Deeper Into Movies",
        "status": {},
        "time": 1773496800000,
      },
    ],
    "showingId": "dice.fm-6dnqx2",
    "title": "MARTIN AMIS'S ENGLAND",
    "url": "https://dice.fm/event/6dnqx2-martin-amiss-england-14th-mar-the-haggerston-london-tickets",
  },
  {
    "category": "event",
    "overview": {
      "actors": [],
      "categories": [],
      "directors": [],
      "duration": 5400000,
    },
    "performances": [
      {
        "accessibility": {},
        "bookingUrl": "https://dice.fm/event/l89lbp-we-are-making-a-film-about-mark-fisher-15th-mar-the-haggerston-london-tickets",
        "format": {},
        "notes": "Presented by Deeper Into Movies",
        "status": {},
        "time": 1773583200000,
      },
    ],
    "showingId": "dice.fm-l89lbp",
    "title": "WE ARE MAKING A FILM ABOUT MARK FISHER ",
    "url": "https://dice.fm/event/l89lbp-we-are-making-a-film-about-mark-fisher-15th-mar-the-haggerston-london-tickets",
  },
  {
    "category": "event",
    "overview": {
      "actors": [],
      "categories": [],
      "directors": [],
      "duration": 6300000,
    },
    "performances": [
      {
        "accessibility": {},
        "bookingUrl": "https://dice.fm/event/g5mgm5-we-are-making-a-film-about-mark-fisher-15th-mar-the-haggerston-london-tickets",
        "format": {},
        "notes": "Presented by Deeper Into Movies",
        "status": {},
        "time": 1773590400000,
      },
    ],
    "showingId": "dice.fm-g5mgm5",
    "title": "WE ARE MAKING A FILM ABOUT MARK FISHER ",
    "url": "https://dice.fm/event/g5mgm5-we-are-making-a-film-about-mark-fisher-15th-mar-the-haggerston-london-tickets",
  },
  {
    "category": "event",
    "overview": {
      "actors": [],
      "categories": [],
      "directors": [],
      "duration": 5400000,
    },
    "performances": [
      {
        "accessibility": {},
        "bookingUrl": "https://dice.fm/event/bb3wno-this-is-not-an-exit-the-fictional-world-of-bret-easton-ellis-21st-mar-the-haggerston-london-tickets",
        "format": {},
        "notes": "Presented by Deeper Into Movies",
        "status": {},
        "time": 1774101600000,
      },
    ],
    "showingId": "dice.fm-bb3wno",
    "title": "THIS IS NOT AN EXIT  - THE FICTIONAL WORLD OF BRET EASTON ELLIS  ",
    "url": "https://dice.fm/event/bb3wno-this-is-not-an-exit-the-fictional-world-of-bret-easton-ellis-21st-mar-the-haggerston-london-tickets",
  },
  {
    "category": "event",
    "overview": {
      "actors": [],
      "categories": [],
      "directors": [],
      "duration": 5400000,
    },
    "performances": [
      {
        "accessibility": {},
        "bookingUrl": "https://dice.fm/event/eo3mao-chris-cunnigham-screening-28th-mar-the-haggerston-london-tickets",
        "format": {},
        "notes": "Presented by Deeper Into Movies",
        "status": {},
        "time": 1774706400000,
      },
    ],
    "showingId": "dice.fm-eo3mao",
    "title": "CHRIS CUNNIGHAM SCREENING",
    "url": "https://dice.fm/event/eo3mao-chris-cunnigham-screening-28th-mar-the-haggerston-london-tickets",
  },
  {
    "category": "event",
    "overview": {
      "actors": [],
      "categories": [],
      "directors": [],
      "duration": 5400000,
    },
    "performances": [
      {
        "accessibility": {},
        "bookingUrl": "https://dice.fm/event/v3qdov-chris-cunnigham-screening-28th-mar-the-haggerston-london-tickets",
        "format": {},
        "notes": "Presented by Deeper Into Movies",
        "status": {},
        "time": 1774713600000,
      },
    ],
    "showingId": "dice.fm-v3qdov",
    "title": "CHRIS CUNNIGHAM SCREENING",
    "url": "https://dice.fm/event/v3qdov-chris-cunnigham-screening-28th-mar-the-haggerston-london-tickets",
  },
  {
    "category": "event",
    "overview": {
      "actors": [],
      "categories": [],
      "directors": [],
      "duration": 10800000,
    },
    "performances": [
      {
        "accessibility": {},
        "bookingUrl": "https://dice.fm/event/py5xn8-david-foster-wallace-film-screenings-11th-apr-the-haggerston-london-tickets",
        "format": {},
        "notes": "Presented by Deeper Into Movies",
        "status": {},
        "time": 1775912400000,
      },
    ],
    "showingId": "dice.fm-py5xn8",
    "title": "DAVID FOSTER WALLACE - Film Screenings",
    "url": "https://dice.fm/event/py5xn8-david-foster-wallace-film-screenings-11th-apr-the-haggerston-london-tickets",
  },
  {
    "category": "event",
    "overview": {
      "actors": [],
      "categories": [],
      "directors": [],
      "duration": 5400000,
    },
    "performances": [
      {
        "accessibility": {},
        "bookingUrl": "https://dice.fm/event/53rvrw-we-are-making-a-film-about-mark-fisher-12th-apr-the-haggerston-london-tickets",
        "format": {},
        "notes": "Presented by Deeper Into Movies",
        "status": {},
        "time": 1775998800000,
      },
    ],
    "showingId": "dice.fm-53rvrw",
    "title": "WE ARE MAKING A FILM ABOUT MARK FISHER ",
    "url": "https://dice.fm/event/53rvrw-we-are-making-a-film-about-mark-fisher-12th-apr-the-haggerston-london-tickets",
  },
  {
    "category": "event",
    "overview": {
      "actors": [],
      "categories": [],
      "directors": [],
      "duration": 6300000,
    },
    "performances": [
      {
        "accessibility": {},
        "bookingUrl": "https://dice.fm/event/7dmvm6-we-are-making-a-film-about-mark-fisher-12th-apr-the-haggerston-london-tickets",
        "format": {},
        "notes": "Presented by Deeper Into Movies",
        "status": {},
        "time": 1776006000000,
      },
    ],
    "showingId": "dice.fm-7dmvm6",
    "title": "WE ARE MAKING A FILM ABOUT MARK FISHER ",
    "url": "https://dice.fm/event/7dmvm6-we-are-making-a-film-about-mark-fisher-12th-apr-the-haggerston-london-tickets",
  },
  {
    "category": "event",
    "overview": {
      "actors": [],
      "categories": [],
      "directors": [],
      "duration": 5400000,
    },
    "performances": [
      {
        "accessibility": {},
        "bookingUrl": "https://dice.fm/event/oevl2y-mulholland-dr-tv-pilot-18th-apr-the-haggerston-london-tickets",
        "format": {},
        "notes": "Presented by Deeper Into Movies",
        "status": {},
        "time": 1776517200000,
      },
    ],
    "showingId": "dice.fm-oevl2y",
    "title": "MULHOLLAND DR. (TV PILOT)",
    "url": "https://dice.fm/event/oevl2y-mulholland-dr-tv-pilot-18th-apr-the-haggerston-london-tickets",
  },
]
`;
